--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<h1>Привет мир</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Intro</title>
+</head>
+<body>
+
+
+<h1>Шаблон Альты</h1>
+
+<h2>Здесь будут инструкции к шаблонам <br>
+   и ссылки по страницам шаблона</h2>
+
+   <ul>
+     <li><a href="//github.com/zupra/alta">Здесь внутреняя статистика работы и кнопочки СКАЧАТЬ</a></li>
+     <li><a href="//zupra.github.io/alta/build">Здесь первые наброски макета</a></li>
+   </ul>
+
+
+<center>
+  <h2>Эта инструкция будет дополняться</h2>
+</center>
+
+</body>
+</html>
