--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 <h2>Здесь будут инструкции к шаблонам <br>
    и ссылки по страницам шаблона</h2>
 
-   <ul>
-     <li><a href="//github.com/zupra/alta">Здесь внутреняя статистика работы и кнопочки СКАЧАТЬ</a></li>
-     <li><a href="//zupra.github.io/alta/build">Здесь первые наброски макета</a></li>
-   </ul>
+  <h3><a href="//github.com/zupra/alta">Здесь внутреняя статистика работы и кнопочки СКАЧАТЬ ZIP</a></h3>
+
+  <h3><a href="//zupra.github.io/alta/build">Здесь первые наброски макета</a></h3>
 
 
 <center>
